[package]
name = "anfegeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = "1.23.0"
anyhow = "1.0.68"
reqwest = "0.11.13"
serde = "1.0.152"
serde_json = "1.0.91"
dotenv = "0.15.0"
